hphp/hack/test/typecheck/invariant_return.php.exp
File "invariant_return.php", line 12, characters 30-45:
Invalid return type (Typing[4110])
File "invariant_return.php", line 12, characters 17-19:
This is an int
File "func_pointers.hhi", line 182, characters 4-7:
It is incompatible with void
